work genres links

--- a/web/pages/books.xhtml
+++ b/web/pages/books.xhtml
@@ -8,7 +8,6 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Facelet Title</title>
-    <h:outputStylesheet library="CSS" name="style_main.css"/>
 </h:head>
 <h:body>
 
@@ -19,7 +18,33 @@
         </ui:define>
 
         <ui:define name="content">
-            #{param.genre_id}
+
+            <p><strong>#{msg.book_count} #{searchController.currentBookList.size()}</strong></p>
+
+            <h:dataTable value="#{searchController.currentBookList}" var="b" cellspacing="10px" columnClasses="col1, col2, col3">
+                <h:column>
+                    <h:graphicImage value="/ShowImage?id=#{b.id}" styleClass="book_image"/>
+                </h:column>
+
+                <h:column>
+                    <div>
+                        <p><a href="#">#{b.name}</a></p>
+                        <p><strong>#{msg.author_name}: </strong>#{b.author}</p>
+                        <p><strong>#{msg.publisher}: </strong>#{b.publisher}</p>
+                        <p><strong>#{msg.publish_year}: </strong>#{b.publishDate} г.</p>
+                        <p><strong>#{msg.pages_count}: </strong>#{b.pageCount}</p>
+                        <p><strong>ISBN: </strong>#{b.isbn}</p>
+                    </div>
+                </h:column>
+
+                <h:column>
+                    <div class="book_details">
+                        <p><strong>#{msg.descr}:</strong></p>
+                        <p>#{b.descr}</p>
+                    </div>
+                </h:column>
+            </h:dataTable>
+
         </ui:define>
 
     </ui:composition>
