work all searches

--- a/web/pages/books.xhtml
+++ b/web/pages/books.xhtml
@@ -45,6 +45,12 @@
                 </h:column>
             </h:dataTable>
 
+            <div class="pager">
+                <h:form>
+                    #{msg.pager}:
+                </h:form>
+            </div>
+
         </ui:define>
 
     </ui:composition>
