--- a/web/pages/books.xhtml
+++ b/web/pages/books.xhtml
@@ -17,9 +17,13 @@
             #{msg.book_list}
         </ui:define>
 
+        <ui:define name="books_count">
+            <h:outputText value="#{msg.book_count} #{searchController.totalBooksCount}" id="booksCount"/>
+        </ui:define>
+
         <ui:define name="content">
 
-            <h:dataTable value="#{searchController.currentBookList}" var="b" cellspacing="10px" columnClasses="col1, col2, col3">
+            <h:dataTable id="bookList" value="#{searchController.currentBookList}" var="b" cellspacing="10px" columnClasses="col1, col2, col3">
                 <h:column>
                     <h:outputLink value="#{request.contextPath}/PdfContent?id=#{b.id}">
                         <h:graphicImage value="/ShowImage?id=#{b.id}" styleClass="book_image"/>
@@ -28,13 +32,13 @@
 
                 <h:column>
                     <div>
-                        <p><h:outputLink value="#{request.contextPath}/PdfContent?id=#{b.id}">#{b.name}</h:outputLink></p>
+                        <p style="margin: 10px 0;"><h:outputLink value="#{request.contextPath}/PdfContent?id=#{b.id}">#{b.name}</h:outputLink></p>
                         <p><strong>#{msg.author_name}: </strong>#{b.author}</p>
                         <p><strong>#{msg.publisher}: </strong>#{b.publisher}</p>
                         <p><strong>#{msg.publish_year}: </strong>#{b.publishDate} г.</p>
                         <p><strong>#{msg.pages_count}: </strong>#{b.pageCount}</p>
                         <p><strong>ISBN: </strong>#{b.isbn}</p>
-                        <p><h:graphicImage library="images" name="read.png" styleClass="read_image"/>
+                        <p style="margin: 10px 0;"><h:graphicImage library="images" name="read.png" styleClass="read_image"/>
                             <h:outputLink value="#{request.contextPath}/PdfContent?id=#{b.id}" styleClass="content_link">#{msg.read}</h:outputLink></p>
                     </div>
                 </h:column>
@@ -52,9 +56,10 @@
             <h:form rendered="#{searchController.totalBooksCount > searchController.booksOnPage}">
                 #{msg.pager}:
                 <ui:repeat value="#{searchController.pageNumbers}" var="pageNumber">
-                    <h:commandLink value="#{pageNumber}" action="#{searchController.selectPage()}"
-                                   styleClass="#{pageNumber == searchController.selectedPageNumber ? 'selected_page':''}">
+                    <h:commandLink value="#{pageNumber}" styleClass="#{pageNumber == searchController.selectedPageNumber ? 'selected_page':''}">
                         <f:param name="page_number" value="#{pageNumber}"/>
+                        <f:ajax onevent="showProgress" event="click" render=":bookList :lettersForm :genresForm :searchForm :pages1 :pages2 :booksCount"
+                                listener="#{searchController.selectPage()}"/>
                     </h:commandLink>
                 </ui:repeat>
             </h:form>
