--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
+<f:view locale="#{localeChanger.currentLocale}">
    <h:head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
       <title>#{msg.welcome_title}</title>
@@ -18,8 +19,10 @@
 
       <div class="main">
 
+         <ui:include src="templates/locales.xhtml"/>
+
          <div class="content">
-            <p class="title"><h:graphicImage library="images" name="books.jpg"/></p>
+            <p class="title" style="margin-top: 80px;"><h:graphicImage library="images" name="books.jpg"/></p>
             <p class="title">#{msg.index_title}</p>
          </div>
 
@@ -51,6 +54,7 @@
                   </tr>
                </table>
             </h:form>
+
          </div>
 
          <div class="footer">
@@ -60,4 +64,5 @@
       </div>
 
    </h:body>
+</f:view>
 </html>
